package com.sep490.slms2026.entity;

import jakarta.persistence.*;
import lombok.*;
import java.io.Serializable;
import java.time.LocalDateTime;

@Entity
@Table(name = "notifications")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
@EntityListeners(NotificationListener.class)
public class Notification implements Serializable {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "user_id", nullable = false)
    private java.util.UUID userId;

    private String title;

    @Column(columnDefinition = "TEXT")
    private String content;

    private String type; // MASTER_LEASE_EXPIRY, LOSS_ALERT, etc.

    @Column(name = "screen")
    private String screen;

    @Column(name = "params_json", columnDefinition = "TEXT")
    private String paramsJson;

    /** Chống nhắc trùng cron — null với thông báo cũ / one-shot. */
    @Column(name = "dedupe_key", length = 255)
    private String dedupeKey;

    @Column(name = "is_read", nullable = false)
    private boolean read = false;

    private LocalDateTime createdAt;

    @PrePersist
    protected void onCreate() {
        createdAt = LocalDateTime.now();
    }
}
